# opal

./: Cargo.toml  build.rs
.cargo/: config.toml
debug/: README.md
src/: album_art.rs  api.rs  audio_eq.rs  audio_sink.rs  bounded.rs  canvas.rs  cluster_listener.rs  debug_config.rs  errors.rs  local_player.rs  main.rs  prefs.rs  spirc_bootstrap.rs  spotify_session.rs  video.rs  worker.rs
src/app/: frame.rs  mod.rs  msg.rs  reducer.rs  state.rs  update.rs
src/auth/: oauth.rs
src/model/: art.rs  auth.rs  backdrop.rs  canvas.rs  devices.rs  eq.rs  library.rs  membership.rs  menu.rs  mod.rs  player.rs  prefs.rs  router.rs  search.rs  settings.rs
src/views/: login.rs  mod.rs  setup.rs
src/views/home/: artist.rs  context_menu.rs  devices.rs  like_menu.rs  main_pane.rs  mod.rs  now_playing.rs  player_bar.rs  playlist.rs  queue.rs  recents.rs  search_modal.rs  settings.rs  show_all.rs  top_bar.rs
src/widgets/: artist_links.rs  chip.rs  chrome.rs  color.rs  crossfade.rs  icon.rs  mod.rs  splitter.rs  tokens.rs  track_row.rs
xtask/: Cargo.toml
xtask/src/: main.rs
